Updated .gitignore to ignore zip files and some standard FitNesse pages

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,18 @@
 # FitNesse standard content and binaries
 FitNesseRoot/FitNesse/
 FitNesseRoot/RecentChanges/
+FitNesseRoot/RecentChanges*
 FitNesseRoot/TemplateLibrary/
 FitNesseRoot/files/testResults/
+FitNesseRoot/PageFooter
+FitNesseRoot/PageHeader
+FitNesseRoot/FrontPage
+FitNesseRoot/content.txt
+FitNesseRoot/properties.xml
+FitNesseRoot/properties
+FitNesseRoot/**/*.zip
 Plugins/
 Fixtures/
-TestOutput/
 
 # User-specific files
 *.suo
