--- a/ExtendedMath/ExtendedMathFixtures/ExtendedMathFixtures.csproj
+++ b/ExtendedMath/ExtendedMathFixtures/ExtendedMathFixtures.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Version>3.0.0</Version>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysysMode>AllEnabledByDefault</AnalysysMode>
+    <Version>3.0.0</Version>
+    <Authors>Rik Essenius</Authors>
+    <Company />
+    <Copyright>Copyright © Rik Essenius 2013-2021</Copyright>
+    <RepositoryUrl>https://github.com/essenius/FitNesseFitSharpFibonacciDemo</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
