--- a/ExtendedMath/ExtendedMath/ExtendedMath.csproj
+++ b/ExtendedMath/ExtendedMath/ExtendedMath.csproj
@@ -6,7 +6,7 @@
     <AnalysysMode>AllEnabledByDefault</AnalysysMode>
     <Version>3.0.0</Version>
     <Authors>Rik Essenius</Authors>
-    <Company />
+    <Description>Fibonacci function to be used as simple Fitnesse demo</Description>
     <Copyright>Copyright © Rik Essenius 2013-2021</Copyright>
     <RepositoryUrl>https://github.com/essenius/FitNesseFitSharpFibonacciDemo</RepositoryUrl>
   </PropertyGroup>
