--- a/plugins.properties
+++ b/plugins.properties
@@ -1,8 +1,15 @@
 Port=8080
 TEST_SYSTEM=slim
 slim.timeout=10
+TEST_RUNNER=dotnet
+FIXTURE_FOLDER=.
+
+## Windows ##
 FITSHARP_HOME=${LOCALAPPDATA}\\FitSharp\\lib\\net5.0
 FITNESSE_ROOT=${FITNESSE_ROOTPATH}\\FitNesseRoot
-FIXTURE_FOLDER=.
 COMMAND_PATTERN=%m ${FITSHARP_HOME}\\Runner.dll -c ${FIXTURE_FOLDER}\\config.xml
-TEST_RUNNER=dotnet
+
+## Mac ##
+# FITSHARP_HOME=${HOME}/Documents/FitSharp/lib/net5.0
+# FITNESSE_ROOT=${FITNESSE_ROOTPATH}/FitNesseRoot
+# COMMAND_PATTERN=%m ${FITSHARP_HOME}/Runner.dll -c ${FIXTURE_FOLDER}/config.xml
