--- a/ExtendedMath/ExtendedMathFixtures/ExtendedMathFixtures.csproj
+++ b/ExtendedMath/ExtendedMathFixtures/ExtendedMathFixtures.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-    <AnalysysMode>AllEnabledByDefault</AnalysysMode>
-    <Version>3.1.0</Version>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <Version>3.1.1</Version>
     <Authors>Rik Essenius</Authors>
     <Description>Fixture for the Fibonacci function</Description>
     <Copyright>Copyright © Rik Essenius 2013-2024</Copyright>
